[tool.poetry]
name = "docugami_dfm_benchmarks"
version = "0.0.1"
description = "Benchmarks for Docugami's Document Foundation Model."
authors = ["Docugami Inc. <contact@docugami.com>"]

packages = [{ include = "docugami" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.13.1"
transformers = "^4.27.4"
sentence-transformers = "^2.2.2"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = "*"
tqdm = "*"
flake8 = "*"
bandit = "*"
notebook = "*"
ipywidgets = "*"
pyright = "*"
pytest = "*"
pytest-cov = "*"
setuptools = "*"
typer = "*"
ipykernel = "^6.22.0"
tabulate = "^0.9.0"

[tool.black]
line-length = 127

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=data --ignore=model --ignore docugami/external"
junit_family = "xunit2"

[tool.pyright]
include = ["docugami", "scripts", "scripts"]
ignore = ["**/node_modules", "**/__pycache__", "model", "data"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.poetry.scripts]
benchmark = "docugami.dfm_benchmarks.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
