[tool.poetry]
name = "docugami_dfm_benchmarks"
version = "0.0.2"
description = "Benchmarks for Docugami's Document Foundation Model."
authors = ["Docugami Inc. <contact@docugami.com>"]

packages = [{ include = "docugami_dfm_benchmarks" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.2.1"
transformers = "^4.38.2"
sentence-transformers = "^2.5.1"
pyyaml = "^6.0.1"
importlib-metadata = "^7.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
mypy = "^1.9.0"
codespell = "^2.2.6"
ipykernel = "^6.29.3"
tabulate = "^0.9.0"
tqdm = "^4.66.2"
notebook = "^7.1.1"
ipywidgets = "^8.1.2"
pytest = "^8.1.1"
setuptools = "^69.2.0"
typer = "^0.9.0"
types-tabulate = "^0.9.0.20240106"
types-tqdm = "^4.66.0.20240106"

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
line-length = 200

[tool.mypy]
disallow_untyped_defs = "True"
disable_error_code = "typeddict-item"

[[tool.mypy.overrides]]
module = [
    "sentence_transformers",
]
ignore_missing_imports = true

[tool.poetry.scripts]
benchmark = "docugami_dfm_benchmarks.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
